--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -6,5 +6,11 @@
     ~/bin:
         path: bin/
         create: true
+    ~/.tmux.conf: tmux.conf
+    ~/.tmux.conf.local: tmux.conf.local
+    ~/.vimrc: vimrc
+    ~/.vimrc.local: vimrc.local
+    ~/.vimrc.bundles: vimrc.bundles
+    ~/.vimrc.bundles.local: vimrc.bundles.local
 
 
