--- a/tmux.conf
+++ b/tmux.conf
@@ -101,5 +101,5 @@ bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M"
 # AFAICT.
 set-option -g assume-paste-time 0
 
-# source-file ~/.tmux.conf.local
+source-file ~/.tmux.conf.local
 set -g default-command "reattach-to-user-namespace -l /bin/zsh"
