--- a/tmux.conf
+++ b/tmux.conf
@@ -56,26 +56,26 @@ bind-key [ copy-mode
 bind-key ] paste-buffer
 
 # Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# bind-key -t vi-copy v begin-selection
+# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# unbind -t vi-copy Enter
+# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 set-window-option -g display-panes-time 1500
 
 # Status Bar
-# set-option -g status-interval 1
-# set-option -g status-left ''
-# set-option -g status-right '%l:%M%p'
-# set-window-option -g window-status-current-fg magenta
-# set-option -g status-fg default
+set-option -g status-interval 1
+set-option -g status-left ''
+set-option -g status-right '%l:%M%p'
+set-window-option -g window-status-current-fg magenta
+set-option -g status-fg default
 
 # Status Bar solarized-dark (default)
-# set-option -g status-bg black
-# set-option -g pane-active-border-fg black
-# set-option -g pane-border-fg black
+set-option -g status-bg black
+set-option -g pane-active-border-fg black
+set-option -g pane-border-fg black
 
 # Status Bar solarized-light
 # if-shell "[ \"$COLORFGBG\" = \"11;15\" ]" "set-option -g status-bg white"
@@ -83,11 +83,11 @@ set-window-option -g display-panes-time 1500
 # if-shell "[ \"$COLORFGBG\" = \"11;15\" ]" "set-option -g pane-border-fg white"
 
 # Set window notifications
-# setw -g monitor-activity on
-# set -g visual-activity on
+setw -g monitor-activity on
+set -g visual-activity on
 
 # Enable native Mac OS X copy/paste
-set-option -g default-command "/bin/bash -c 'which reattach-to-user-namespace >/dev/null && exec reattach-to-user-namespace $SHELL -l || exec $SHELL -l'"
+# set-option -g default-command "/bin/bash -c 'which reattach-to-user-namespace >/dev/null && exec reattach-to-user-namespace $SHELL -l || exec $SHELL -l'"
 
 # Allow the arrow key to be used immediately after changing windows
 set-option -g repeat-time 0
@@ -99,7 +99,7 @@ bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M"
 # Disable assume-paste-time, so that iTerm2's "Send Hex Codes" feature works
 # with tmux 2.1. This is backwards-compatible with earlier versions of tmux,
 # AFAICT.
-set-option -g assume-paste-time 0
+# set-option -g assume-paste-time 0
 
 source-file ~/.tmux.conf.local
-set -g default-command "reattach-to-user-namespace -l /bin/zsh"
+# set -g default-command "reattach-to-user-namespace -l /bin/zsh"
