--- a/tmux.conf
+++ b/tmux.conf
@@ -56,12 +56,12 @@ bind-key [ copy-mode
 bind-key ] paste-buffer
 
 # Setup 'v' to begin selection as in Vim
-# bind-key -t vi-copy v begin-selection
-# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe
-# unbind -t vi-copy Enter
-# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 set-window-option -g display-panes-time 1500
 
@@ -99,7 +99,7 @@ bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M"
 # Disable assume-paste-time, so that iTerm2's "Send Hex Codes" feature works
 # with tmux 2.1. This is backwards-compatible with earlier versions of tmux,
 # AFAICT.
-# set-option -g assume-paste-time 0
+set-option -g assume-paste-time 0
 
 source-file ~/.tmux.conf.local
-# set -g default-command "reattach-to-user-namespace -l /bin/zsh"
+set -g default-command "reattach-to-user-namespace -l /bin/zsh"
