--- a/tmux.conf
+++ b/tmux.conf
@@ -103,3 +103,4 @@ bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M"
 
 source-file ~/.tmux.conf.local
 # set -g default-command "reattach-to-user-namespace -l /bin/zsh"
+set-option -g default-shell /bin/zsh
