--- a/tmux.conf
+++ b/tmux.conf
@@ -17,7 +17,8 @@ set-option -g default-terminal screen-256color
 
 bind-key : command-prompt
 bind-key r refresh-client
-bind-key L clear-history
+# bind-key L clear-history
+bind -n C-n send-keys C-l \; clear-history
 
 bind-key space next-window
 bind-key bspace previous-window
@@ -31,13 +32,24 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
+
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
 # uncomment below stanza to enable smart pane switching with awareness of vim splits
-bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-h) || tmux select-pane -L"
-bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-j) || tmux select-pane -D"
-bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-k) || tmux select-pane -U"
-bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-l) || tmux select-pane -R"
-bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys 'C-\\') || tmux select-pane -l"
-bind C-l send-keys 'C-l'
+# bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-h) || tmux select-pane -L"
+# bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-j) || tmux select-pane -D"
+# bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-k) || tmux select-pane -U"
+# bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-l) || tmux select-pane -R"
+# bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys 'C-\\') || tmux select-pane -l"
+# bind C-l send-keys 'C-l'
 
 bind-key C-o rotate-window
 
@@ -56,26 +68,27 @@ bind-key [ copy-mode
 bind-key ] paste-buffer
 
 # Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# bind-key -T copy-mode-vi v begin-selection
+# bind-key -T copy-mode-vi y copy-pipe "reattach-to-user-namespace pbcopy"
+bind -Tcopy-mode-vi M-y send -X copy-pipe "xclip -i -sel p -f | xclip -i -sel c" \; display-message "copied to system clipboard"
 
 # Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# unbind -T copy-mode-vi Enter
+# bind-key -T copy-mode-vi Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 set-window-option -g display-panes-time 1500
 
 # Status Bar
-set-option -g status-interval 1
-set-option -g status-left ''
+# set-option -g status-interval 1
+# set-option -g status-left ''
 # set-option -g status-right '%l:%M%p'
-set-window-option -g window-status-current-fg magenta
-set-option -g status-fg default
+# set-window-option -g window-status-current-fg magenta
+# set-option -g status-fg default
 
 # Status Bar solarized-dark (default)
-set-option -g status-bg black
-set-option -g pane-active-border-fg black
-set-option -g pane-border-fg black
+# set-option -g status-bg black
+# set-option -g pane-active-border-fg black
+# set-option -g pane-border-fg black
 
 # Status Bar solarized-light
 # if-shell "[ \"$COLORFGBG\" = \"11;15\" ]" "set-option -g status-bg white"
@@ -102,4 +115,33 @@ bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M"
 set-option -g assume-paste-time 0
 
 source-file ~/.tmux.conf.local
-set -g default-command "reattach-to-user-namespace -l /bin/zsh"
+
+# Start windows and panes at 1, not 0
+set -g base-index 1
+set -g pane-base-index 1
+
+set-option -g status-position top
+
+set-option -g repeat-time 0
+
+# Removes ESC delay
+set -sg escape-time 0
+
+# List of plugins
+set -g @tpm_plugins '                     \
+    caiogondim/maglev                     \
+    tmux-plugins/tpm                      \
+    tmux-plugins/tmux-sensible            \
+    # tmux-plugins/tmux-resurrect           \
+    # tmux-plugins/tmux-continuum           \
+    tmux-plugins/tmux-yank                \
+    tmux-plugins/tmux-pain-control        \
+    tmux-plugins/tmux-copycat             \
+    tmux-plugins/tmux-open                \
+    # tmux-plugins/tmux-battery             \
+    # tmux-plugins/tmux-cpu                 \
+    # tmux-plugins/tmux-prefix-highlight    \
+'
+
+# Initialize TMUX plugin manager
+run '~/.tmux/plugins/tpm/tpm'
