Add local files

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -3,9 +3,13 @@
 - link:
     ~/.gitconfig: gitconfig
     ~/.zshrc: zshrc
+    ~/.zshrc.local: zshrc.local
     ~/.tmux.conf: tmux.conf
+    ~/.tmux.conf.local: tmux.conf.local
     ~/.vimrc: vimrc
+    ~/.vimrc.local: vimrc.local
     ~/.vimrc.bundles: vimrc.bundles
+    ~/.vimrc.bundles.local: vimrc.bundles.local
     ~/.gemrc: gemrc
 
 
